[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Ball.gd" type="Script" id=3]
[ext_resource path="res://scenes/Barrier.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Goal.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/Main.gd" type="Script" id=7]
[ext_resource path="res://scripts/player/PlayerOne.gd" type="Script" id=8]
[ext_resource path="res://scripts/player/PlayerTwo.gd" type="Script" id=9]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 10 )

[node name="Main" type="Node"]
script = ExtResource( 7 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Ceiling" parent="." instance=ExtResource( 4 )]

[node name="Floor" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 520 )

[node name="GoalLeft" parent="." instance=ExtResource( 5 )]

[node name="GoalRight" parent="." instance=ExtResource( 5 )]
position = Vector2( 760, 0 )

[node name="Ball" parent="." groups=["bodies"] instance=ExtResource( 2 )]
position = Vector2( 360, 240 )
collision_mask = 0
script = ExtResource( 3 )

[node name="PlayerOne" parent="." groups=["bodies"] instance=ExtResource( 1 )]
position = Vector2( 20, 240 )
collision_layer = 0
script = ExtResource( 8 )

[node name="PlayerTwo" parent="." groups=["bodies"] instance=ExtResource( 1 )]
position = Vector2( 700, 240 )
collision_layer = 0
script = ExtResource( 9 )

[node name="MainMenuButton" type="Button" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 280.0
margin_top = -190.0
margin_right = -278.0
margin_bottom = -130.0
custom_fonts/font = SubResource( 1 )
text = "Main Menu"

[connection signal="round_started" from="." to="Ball" method="_on_Main_round_started"]
[connection signal="area_entered" from="GoalLeft" to="." method="_on_GoalLeft_area_entered"]
[connection signal="area_entered" from="GoalRight" to="." method="_on_GoalRight_area_entered"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_Button_pressed"]
